# SpoonUtilities

./: README  permission  spoonutil.cabal  spoonutils.html  test.sh
Error/: Report.hs
Test/: .Simple.hs.swp  .Spoon.hs.swp  Simple.hs
Text/: Pretty.hs
tests/: test.hs
